navigation iphone fix

--- a/css/_navigation.css
+++ b/css/_navigation.css
@@ -50,7 +50,7 @@
 	width: 100%;
 	/*background-color: #141413;*/
 	background-color: #1E1E1D;
-	box-shadow: 0px 9px 10px -4px rgba(0,0,0,0.2);
+	box-shadow: 0 9px 10px -4px rgba(0,0,0,0.2);
 
 	z-index: 10;
 	/*transition: top 300ms linear;*/
@@ -108,7 +108,7 @@
 
 .navigation-dropdown__content {
 	background-color: #323231;
-	box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.2);
+	box-shadow: 0 0 10px 4px rgba(0,0,0,0.2);
 	border-radius: 5px;
 
 	padding-top: 10px;
@@ -189,8 +189,8 @@ svg:not(:root) { overflow: hidden; }
 {
 	.navigation__content {
 		width: 100%;
-		padding-left: 64px;
-		padding-right: 64px;
+		/*padding-left: 64px;*/
+		/*padding-right: 64px;*/
 		/*overflow: hidden;*/
 	}
 }
